--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,80 +12,81 @@
         android:layout_width="157dp"
         android:layout_height="159dp"
         android:id="@+id/im1"
-        android:src="@drawable/bms"
+        android:src="@drawable/phase"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#00000000"
+        android:adjustViewBounds="true" />
 
     <Button
         android:id="@+id/btn1"
-
         android:text="EVENTS"
-        android:textColor="#FFFFFF"
+        android:textColor="#fffdfdf1"
         android:textSize="25sp"
-
-        android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_width="230dp"
+        android:layout_height="50dp"
         android:background="@drawable/buttonshape"
-        android:shadowColor="#0F0E03"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:gravity="center"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1" />
-    <Button
-        android:id="@+id/btn2"
-
-        android:text="SCHEDULE"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-
-        android:layout_width="270dp"
-        android:layout_height="60dp"
-        android:background="@drawable/buttonshape"
-        android:shadowColor="#0F0E03"
-        android:shadowDx="0"
-        android:shadowDy="0"
+        android:shadowColor="#ff020202"
+        android:shadowDx="5"
+        android:shadowDy="5"
         android:shadowRadius="5"
         android:layout_weight="1"
+        android:gravity="center"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="30dp" />
+
+
+    <Button
+        android:id="@+id/btn2"
+        android:text="Schedule"
+        android:textColor="#fffdfdf1"
+        android:textSize="25sp"
+        android:layout_width="230dp"
+        android:layout_height="50dp"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#ff020202"
+        android:shadowDx="5"
+        android:shadowDy="5"
+        android:shadowRadius="5"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_weight="1"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btn3"
-
-        android:text="APP TEAM"
-        android:textColor="#FFFFFF"
+        android:text="meet the team"
+        android:textColor="#fffdfdf1"
         android:textSize="25sp"
-
-        android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_width="230dp"
+        android:layout_height="50dp"
         android:background="@drawable/buttonshape"
-        android:shadowColor="#0F0E03"
-        android:shadowDx="0"
-        android:shadowDy="0"
+        android:shadowColor="#ff020202"
+        android:shadowDx="5"
+        android:shadowDy="5"
         android:shadowRadius="5"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
         android:layout_weight="1"
-        android:layout_marginTop="20dp" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btn4"
-
-        android:text="REACH BMSCE"
-        android:textColor="#FFFFFF"
+        android:text="Reach bmsce"
+        android:textColor="#fffdfdf1"
         android:textSize="25sp"
-
-        android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_width="230dp"
+        android:layout_height="50dp"
         android:background="@drawable/buttonshape"
-        android:shadowColor="#0F0E03"
-        android:shadowDx="0"
-        android:shadowDy="0"
+        android:shadowColor="#ff020202"
+        android:shadowDx="5"
+        android:shadowDy="5"
         android:shadowRadius="5"
+        android:textStyle="bold"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center_horizontal" />
 
 
 </LinearLayout>
