--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -5,7 +5,7 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
-        android:background="#"
+        android:background="#000000"
         android:layout_height="fill_parent" />
 
 </RelativeLayout>
