--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -1,11 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:components="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
+    <com.user.phaseshift.GIFView
+
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+      android:layout_gravity="center_vertical"
+        android:id="@+id/view"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:background="#000000"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/view" />
 
 </RelativeLayout>
