--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -1,22 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:components="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
+    android:background="#ffffff"
+    android:id="@+id/r1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
+    android:layout_height="fill_parent">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#A41C36"
+        android:elevation="6dp"
+        android:title="APP TEAM"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+<RelativeLayout
+    android:id="@+id/gifLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="200dp"
+    android:layout_below="@+id/toolbar"
+    android:background="#ffffff">
     <com.user.phaseshift.GIFView
 
-        android:layout_width="fill_parent"
-        android:layout_height="200dp"
-      android:layout_gravity="center_vertical"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+      android:layout_gravity="center_horizontal"
         android:id="@+id/view"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="#ffffff"
+        android:layout_marginBottom="10dp"
+       android:layout_alignParentBottom="true"
+        android:layout_marginLeft="20dp" />
+
+</RelativeLayout>
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
-        android:background="#000000"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/view" />
+        android:background="#A41C36"
 
+        android:layout_height="fill_parent"
+        android:layout_below="@id/gifLayout" />
+    <TextView
+        android:id="@+id/mainLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gifLayout"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:text="Loading..."
+        android:textSize="30dp"
+        />
 </RelativeLayout>
