--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -2,18 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="15dp"
-    android:paddingBottom="10dp"
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp"
 
     android:orientation="vertical"
     android:divider="@null">
 
-    <ImageView
+    <TextView
         android:id="@+id/icon"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:padding="5dp"
-        android:layout_gravity="center" />
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:textSize="25dp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:background="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="2dp" />
 
 
 
