--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -4,6 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="5sp"
-    android:textSize="25sp" >
+    android:textColor="#ffffff"
+    android:textStyle="bold"
+
+    android:textSize="20sp" >
 
 </TextView>
