--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffcc"
+    android:background="@drawable/back"
     tools:context="{relativePackage}.${activityClass}">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -18,10 +18,12 @@
 
     <ListView
         android:id="@+id/list"
-        android:paddingTop="10sp"
+        android:paddingTop="5sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:background="@drawable/back"
+        android:dividerHeight="3dp"
         android:layout_below="@+id/toolbar">
     </ListView>
 
