--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="157dp"
         android:layout_height="159dp"
         android:id="@+id/im1"
-        android:src="@drawable/phase"
+        android:src="@drawable/ps"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
         android:background="#00000000"
