--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
 
     <Button
         android:id="@+id/btn2"
-        android:text="Schedule"
+        android:text="PhaseShift"
         android:textColor="#fffdfdf1"
         android:textSize="25sp"
         android:layout_width="230dp"
@@ -56,7 +56,7 @@
 
     <Button
         android:id="@+id/btn3"
-        android:text="meet the team"
+        android:text="app team"
         android:textColor="#fffdfdf1"
         android:textSize="25sp"
         android:layout_width="230dp"
